# plaid-python

./: setup.cfg  tox.ini
plaid/: client.py
tests/: test_client.py
