[metadata]
name = lovely-plaid-python
version = 0.0.1
author = Lovely Team
author-email = engineering@livelovely.com
summary = A Python Library That Wraps the Plaid API
license = Other/Proprietary License
description-file = README.md
requires-python = >=3.4
classifier =
    Development Status :: 4 - Beta
    Environment :: Web
    Intended Audience :: Developers
    License :: MIT
    Natural Language :: English
    Operating System :: OS Independent
    Private :: Do Not Upload
    Programming Language :: Python :: 3.4

[wheel]
universal = 0

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
